<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/invest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/invest_calc"/>

        <Button
            android:id="@+id/stock"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/stock_calc"/>


    </LinearLayout>


</RelativeLayout>